--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-.cxx
+
+# 参考 https://blog.csdn.net/beita08/article/details/80118961 设置Git忽略文件及.idea文件夹
+/.idea
