--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         externalNativeBuild {
+//            cmake {
+//                cppFlags ""
+////                abiFilters 'armeabi-v7a', 'arm64-v8a'
+//            }
+            //编译c++报错找不到iostream
             cmake {
-                cppFlags ""
-//                abiFilters 'armeabi-v7a', 'arm64-v8a'
+                arguments "-DANDROID_ARM_NEON=TRUE", "-DCMAKE_BUILD_TYPE=Release"
+                cppFlags "-std=c++11"
             }
         }
     }
